# altv-lua-module

./: .build.bat.swp  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  build.bat  build.sh  build_client_win.bat  build_server_linux.sh  build_server_win.bat  cmake-variants.yaml  cmake_install.cmake  cpp.hint
.github/workflows/: build-deploy.yml  documentation.yml
docs/: .gitignore  build.ps1  docfx.json  index.md  package.json  test.js  toc.yml  typedoc.json
docs/api/: index.md
docs/apidoc/: _altmp_altv_types_alt_client_loadYtyp.md
docs/articles/: index.md
docs/client/: index.d.ts  package.json  tsconfig.json
docs/server/: index.d.ts  package.json  tsconfig.json
lua-module/scripts/: mysql.lua
scripts/: mysql.lua  sqlite3.lua
scripts/SQL/MySQL/: mysql_ffi.lua
scripts/mysql/: mysql.lua
scripts/mysql/MySQL/: mysql_ffi.lua  mysql_row.lua
scripts/sqlite3/: sqlite3.lua
scripts/sqlite3/SQLite3/: sqlite3_ffi.lua  sqlite3_row.lua
src/: CArgReader.h  CDatabaseManager.cpp  CDatabaseManager.h  CLuaAltFuncDefs.cpp  CLuaAltFuncDefs.h  CLuaDefs.cpp  CLuaDefs.h  CLuaDefs2.cpp  CLuaDefs2.h  CLuaFunctionDefs.cpp  CLuaFunctionDefs.h  CLuaResourceImpl.cpp  CLuaResourceImpl.h  CLuaScriptRuntime.cpp  CLuaScriptRuntime.h  CMakeLists.txt  CVehModels.cpp  CVehModels.h  CVehMods.cpp  CVehMods.h  EventManager.cpp  EventManager.h  LuaResourceImpl.cpp  LuaResourceImpl.h  LuaScriptRuntime.cpp  LuaScriptRuntime.h  LuaWrapper.hpp  Main.cpp  Main.h  VehicleModels.hpp  semver.hpp
src/Database/: MariaDatabase.cpp  MariaDatabase.h
src/Defs/: Alt.cpp  Alt.h  CLuaAltFuncDefs.cpp  CLuaAltFuncDefs.h  CLuaConfigDefs.cpp  CLuaConfigDefs.h  CLuaDiscordManagerDefs.cpp  CLuaDiscordManagerDefs.h  CLuaHandlingDataDefs.cpp  CLuaHandlingDataDefs.h  CLuaMapDataDefs.cpp  CLuaMapDataDefs.h  CLuaMiscScripts.cpp  CLuaMiscScripts.h  CLuaNativeDefs.cpp  CLuaNativeDefs.h  CLuaRGBADefs.cpp  CLuaRGBADefs.h  CLuaResourceFuncDefs.cpp  CLuaResourceFuncDefs.h  CLuaVector2Defs.cpp  CLuaVector2Defs.h  CLuaVector3Defs.cpp  CLuaVector3Defs.h  CLuaVoiceDefs.cpp  CLuaVoiceDefs.h  CLuaWebSocketDefs.cpp  CLuaWebSocketDefs.h  CLuaWebViewDefs.cpp  CLuaWebViewDefs.h  Config.cpp  Config.h  Resource.cpp  Resource.h  Voice.cpp  Voice.h
src/Defs/Client/: Audio.cpp  Audio.h  DiscordManager.cpp  DiscordManager.h  HandlingData.cpp  HandlingData.h  MapData.cpp  MapData.h  Native.cpp  (+9 more)
src/Helpers/: ArgumentReader.h  LRGBA.h  LuaHelpers.cpp  LuaHelpers.h  MetaFunction.cpp
vendors/alt-config/: alt-config.h
vendors/luajit/: Makefile
(+60 files in other folders)
